# asdfr-assignment1

./: .gitignore  README.md  pose_data.txt
src/brightness_node/: CMakeLists.txt  README.md  package.xml
src/brightness_node/src/: brightness_node.cpp
src/cam2image_vm2ros/: CMakeLists.txt
src/cam2image_vm2ros/config/: cam2image.yaml
src/closed_loop_follower/: CMakeLists.txt  README.md  package.xml
src/closed_loop_follower/launch/: closed_loop.launch.py
src/closed_loop_follower/src/: closed_loop_follower.cpp
src/object_follower/: CMakeLists.txt  README.md  package.xml
src/object_follower/src/: object_follower.cpp
src/position_node/: CMakeLists.txt  README.md  package.xml
src/position_node/src/: position_node.cpp
src/relbot_adapter/: package.xml
src/relbot_msgs/: package.xml
src/relbot_simulator/: package.xml
src/sequence_controller/: CMakeLists.txt  README.md  package.xml
src/sequence_controller/launch/: test_sequence.launch.py
src/sequence_controller/src/: sequence_controller.cpp
